[project]
name = "qwen-vl-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "packaging>=25.0",
    "transformers",
    "wandb>=0.23.0",
    "wheel>=0.45.1",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "8ac2b91" }
